--- a/app/views/content/_features.haml
+++ b/app/views/content/_features.haml
@@ -13,5 +13,5 @@
     .feature-row
       .asterisk *
       .feature roll-overs
-    %p.feature-text D4 is meant to be a 'jumping off point' for working with D3.  After creating a configurable graph, you have access to all of the graph elements through D4, and you can modify them using D3.  
-    %p.feature-text It is not recommended that you use D4 in production code until release 0.1.  Histograms, line charts, and candlestick graphs will be supported in the initial release.
+    %p.feature-text Please note that this project is being transitioned from a previous code-base called D4 that was dependant upon D3, to a leaner code-base that is built upon jquery.svg.  The goal is to have this library be as lightweight as lean as possible to accomplish the goal of having very customizable declarative graphs.
+    %p.feature-text It is not recommended that you use Dropcharts in production code until release 0.1.  Histograms, line charts, and candlestick graphs will be supported in the initial release.
