--- a/app/views/content/_code.haml
+++ b/app/views/content/_code.haml
@@ -1,3 +1,3 @@
-#create-code
+#create-code{"data-bind" => "show:currentTab() !== '#tests'"}
   <pre><code data-language="javascript" class="rainbow"></code></pre>
   %div{"data-bind" => "displayCode:chartOptions"}
