--- a/app/views/layouts/base.haml
+++ b/app/views/layouts/base.haml
@@ -18,7 +18,7 @@
             %h1 Dropchart.js
           #description-container
             .description
-              %span Easy breezy drop-in charts
+              %span Easy drop-in charts
         #histogram
         #tabs-container
           %ul#tabs{class: 'nav nav-tabs'}
